dataset1235/2025-2/805158916/users/3688932496/executions/71079933_291286518.log
== RUN (2025-08-13 01:53:13)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro: num * 2
# Impressao do dobro do numero
print("O seu dobro é: ",num,dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",num,dobro)
                                ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",num,dobro)
                                ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",num,dobro)
                                ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",num,dobro)
                                ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",num,dobro)
                                ^^^^^
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:57:58)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = num * 2
# Impressao do dobro do numero
print(, dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:55:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int = num * 2
# Impressao do dobro do numero
print("O seu dobro de", num "é:", int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:54:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int: num * 2
# Impressao do dobro do numero
print("O seu dobro de ",num "é: ",int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:41:31)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:55:53)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int = num * 2
# Impressao do dobro do numero
print("O seu dobro de", num "é:", int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", int)
                                ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:57:57)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = num * 2
# Impressao do dobro do numero
print(, dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print(, dobro)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:55:37)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int = num * 2
# Impressao do dobro do numero
print("O seu dobro de", num "é:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:54:13)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int: num * 2
# Impressao do dobro do numero
print("O seu dobro de ",num "é: ",int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:59:07)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = int * 2
# Impressao do dobro do numero
print("",dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dobro = int * 2
            ~~~~^~~
TypeError: unsupported operand type(s) for *: 'type' and 'int'
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dobro = int * 2
            ~~~~^~~
TypeError: unsupported operand type(s) for *: 'type' and 'int'
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dobro = int * 2
            ~~~~^~~
TypeError: unsupported operand type(s) for *: 'type' and 'int'
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dobro = int * 2
            ~~~~^~~
TypeError: unsupported operand type(s) for *: 'type' and 'int'
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    dobro = int * 2
            ~~~~^~~
TypeError: unsupported operand type(s) for *: 'type' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 02:00:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = num * 2
# Impressao do dobro do numero
print("seu dobro é: ",dobro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: seu dobro é:  512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: seu dobro é:  2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: seu dobro é:  11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: seu dobro é:  888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: seu dobro é:  22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:45:32)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num(2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(2))
          ^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(2))
          ^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(2))
          ^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(2))
          ^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num(2))
          ^^^^^^
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:45:53)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 7
    print(num 2)
          ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 7
    print(num 2)
          ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 7
    print(num 2)
          ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 7
    print(num 2)
          ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 7
    print(num 2)
          ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:54:32)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int: num * 2
# Impressao do dobro do numero
print("O seu dobro de "é: ",int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:56:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = num * 2
# Impressao do dobro do numero
print("O seu dobro de", num "é:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:58:13)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = num * 2
# Impressao do dobro do numero
print,dobro
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:50:24)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro: num * 2
# Impressao do dobro do numero
print(dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(dobro)
          ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(dobro)
          ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(dobro)
          ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(dobro)
          ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(dobro)
          ^^^^^
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:54:31)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int: num * 2
# Impressao do dobro do numero
print("O seu dobro de "é: ",int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de "é: ",int)
                              ^
SyntaxError: unterminated string literal (detected at line 9)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:53:46)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro: num * 2
# Impressao do dobro do numero
print("O seu dobro de ",num "é: ",dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",dobro)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",dobro)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",dobro)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",dobro)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",dobro)
                                ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:50:46)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro: num * 2
# Impressao do dobro do numero
print(,dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:55:38)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int = num * 2
# Impressao do dobro do numero
print("O seu dobro de", num "é:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:59:40)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = num * 2
# Impressao do dobro do numero
print("seu dobro é: ",dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: seu dobro é:  512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: seu dobro é:  2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: seu dobro é:  11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: seu dobro é:  888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: seu dobro é:  22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:56:11)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = num * 2
# Impressao do dobro do numero
print("O seu dobro de", num "é:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:50:44)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro: num * 2
# Impressao do dobro do numero
print(,dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:58:04)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = num * 2
# Impressao do dobro do numero
print(,dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print(,dobro)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:54:12)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int: num * 2
# Impressao do dobro do numero
print("O seu dobro de ",num "é: ",int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de ",num "é: ",int)
                                ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:46:19)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256 2
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 1234 2
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 5678 2
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444 2
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 11 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:59:54)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro = num * 2
# Impressao do dobro do numero
print("seu dobro é: ",dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: seu dobro é:  512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: seu dobro é:  2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: seu dobro é:  11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: seu dobro é:  888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: seu dobro é:  22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:55:36)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int = num * 2
# Impressao do dobro do numero
print("O seu dobro de", num "é:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:52:45)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
dobro: num * 2
# Impressao do dobro do numero
print("O seu dobro é: ",dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",dobro)
                            ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",dobro)
                            ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",dobro)
                            ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",dobro)
                            ^^^^^
NameError: name 'dobro' is not defined
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("O seu dobro é: ",dobro)
                            ^^^^^
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:46:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num:2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 7
    print(num:2)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 7
    print(num:2)
             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 7
    print(num:2)
             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 7
    print(num:2)
             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 7
    print(num:2)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 01:55:34)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# calculo do dobro do valor informando
int = num * 2
# Impressao do dobro do numero
print("O seu dobro de", num "é:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 9
    print("O seu dobro de", num "é:", dobro)
                                ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
